<resources>
    <string name="app_name">Workout control</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="input_your_name">Введите данные пользователя</string>
    <string name="name_user">Введите имя</string>
    <string name="user_age">Введите возраст</string>
    <string name="user_weight">Введите вес</string>
    <string name="save_data">Сохранить данные</string>
</resources>
